--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,22 @@ dependencies {
     //Authentication
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
+
+    //JUnit
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
+    //JUnit Rules
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+
+    //Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //Mockito
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    //Robolectric
+    testImplementation 'org.robolectric:robolectric:4.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
